--- a/andrea/layouts/css/main.css
+++ b/andrea/layouts/css/main.css
@@ -4,8 +4,12 @@
   
 }
 section{
-    width:50%;
+    
 }
 .d-flex.align-items-end.flex-column.bd-highlight.mb-3{
     width: 25%;
+}
+form.sing{
+    width:50%;
+    height: 100vh;
 }
